tests/fixtures/LatestTests/VariableDeclarationTests/errors/assignment_count_mismatch_three_to_two.fg
/; EXPECT_ERROR: AssignmentExpressionCountMismatch
var x:int = 10
var y:int = 20
var z:int = 30
x, y, z = 40, 50

